<resources>
    <string name="app_name">Cohab</string>
    <string name="title_activity_login">DOTHIS</string>

    <!-- Strings related to login -->
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to login, create task -->
    <string name="text_accounts">All Accounts</string>
    <string name="text_other_accounts">Other Accounts</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_points">Points</string>
    <string name="hint_numberTask"># Task</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_username_empty">Enter Username</string>
    <string name="error_message_date_empty">Enter date</string>
    <string name="error_message_points_empty">Enter points</string>
    <string name="error_message_username_invalid">Enter valid username (Bigger than 1)</string>
    <string name="error_message_password_empty">Enter Password</string>
    <string name="error_message_password_invalid">Enter valid Password (Bigger than 1)</string>
    <string name="success_message">Registration Successful</string>
    <string name="success_user_edit">Edit Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_username_exists">Username Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_username_taken">Username already taken</string>
    <string name="error_valid_username_exist">Usename doesn\'t exist</string>
    <string name="error_valid_username_password">Wrong Username or Password</string>

    <!-- Activity_main -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Header_main drawer -->
    <string name="user_name">Username</string>
    <string name="user_points">Points</string>
    <string name="user_numberTask">Number of task</string>

    <string name="image_profile">Image of profile</string>

    <!--Content layout -->
    <string name="task_list">Task List</string>
    <string name="profile">Profile</string>
    <string name="user_switch">Switch User</string>
    <string name="log_off">Log Off</string>
    <string name="user_list">User List</string>
    <string name="user_edit">Edit User</string>
    <string name="user_view">User View</string>
    <string name="user_changePic">Change Picture</string>
    <string name="user_delete">Delete Profile</string>
    <string name="create_task">Create Task</string>
    <string name="create_reward">Create Reward</string>
    <string name="switch_login">User Switch</string>
    <string name="registration">Registration</string>
    <string name="task_view">Task View</string>



    <!--content_task_list -->
    <string name="hint_dueDate">Due on: </string>
    <string name="task_due">Due date</string>
    <string name="head_list">Due date</string>
    <string name="new_task">Add task</string>
    <string name="longClick">Long click to view.</string>


    <!-- spinner stuff -->
    <string-array name="drop_status_all">
        <item>All</item>
        <item>Waiting</item>
        <item>In process</item>
        <item>Reported</item>
        <item>Done</item>
    </string-array>
    <string-array name="drop_status">
        <item>Waiting</item>
        <item>In process</item>
        <item>Reported</item>
    </string-array>
    <string-array name="drop_group">
        <item>No group</item>
        <item>Inside</item>
        <item>Outside</item>
    </string-array>
    <string-array name="drop_group_all">
        <item>All</item>
        <item>No group</item>
        <item>Inside</item>
        <item>Outside</item>
    </string-array>


    <!-- User -->
    <string name="user_edit_password">Change password</string>
    <string name="save">Save</string>

    <!-- Task View -->
    <string name="task_name">Task name</string>
    <string name="task_description">Here is a description of the task</string>
    <string name="task_points">Points</string>
    <string name="task_start">The start date</string>
    <string name="task_end">The end date</string>
    <string name="task_availability">Assigned to </string>
    <string name="task_createur">The creator</string>
    <string name="task_edit">Edit task</string>
    <string name="task_done">Done</string>
    <string name="save_task_edit">Save</string>
    <string name="cancel_task_edit">Cancel</string>
    <string name="delete_task">Delete</string>
    <string name="no_description">No description</string>

    <!-- Recompenses -->
    <string name= "recompenses_name">Name</string>
    <string name = "recompenses_description">Description</string>
    <string name="add_reward">Add Reward</string>

    <!-- Strings related to create a recompense -->
    <string name="error_message_name_empty">Enter a valid name </string>
    <string name="error_message_description_empty">Enter a valid description</string>

</resources>
