<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/groupList1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_task_list"
            android:title="@string/task_list" />
        <item
            android:id="@+id/nav_user_list"
            android:title="@string/user_list" />
        <item
            android:id="@+id/nav_user_switch"
            android:title="@string/user_switch" />
    </group>

    <group android:id="@+id/groupList2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resource"
            android:title="Resource List" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_log_off"
            android:title="@string/log_off" />
    </group>

</menu>
