<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.TaskView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/taskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/taskPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_points" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/taskStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_start" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/taskEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_end" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/taskDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_due" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/task_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_availability" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/task_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_createur" />

        <Button
            android:id="@+id/btn_editTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="editTask"
            android:text="@string/task_edit" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>