<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="90dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/image1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/user_name"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pointsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/user_points"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numberTaskTextView"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/user_numberTask"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorTextHint"
                    android:text="@string/user_edit" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taskListTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/task_list"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewUserList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>