<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/image_profileEdit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_round"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp">

                <Button
                    android:id="@+id/btn_changePic"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorTextHint"
                    android:text="@string/user_changePic"
                    android:onClick="picChange"/>

                <Button
                    android:id="@+id/btn_delete_profile"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorTextHint"
                    android:text="@string/user_delete"
                    android:onClick="deleteUser"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </LinearLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="40dp"
            tools:context="activities.Login">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usernameProfileTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profile_username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/user_name"
                    android:textColor="@color/colorText"/>

                <TextView
                    android:id="@+id/passwordProfileTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_password"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profile_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_password"
                    android:textColor="@color/colorText"/>

                <TextView
                    android:id="@+id/passwordConfirmProfileTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_confirm_password"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profile_passwordConfirm_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_confirm_password"
                    android:textColor="@color/colorText"/>

                <Button
                    android:id="@+id/btn_saveEditProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorTextHint"
                    android:text="@string/save"
                    android:onClick="saveUser"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>